java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testBug88923-hints.pass
Add throws clause for org.netbeans.test.java.hints.Exc2
Add throws clause for java.io.FileNotFoundException
Add throws clause for java.lang.IllegalThreadStateException
Surround Statement with try-catch
